@@ -28,6 +28,9 @@ include::content/docs/variables.adoc-include[]
 
 icon:check[] OrientDB: The included OrientDB version has been updated to version `3.1.14`.
 
+icon:check[] Cluster: When doing a rolling update in a cluster, a OConcurrentModificationException could occur during the startup, which could cause
+subsequent errors. This has been fixed.
+
 [[v1.7.20]]
 == 1.7.20 (19.10.2021)
 
